Correct header logo w/i .h1-and-figure-wrapper spacing->min 1200px breakpoint

--- a/css/main.css
+++ b/css/main.css
@@ -604,6 +604,16 @@ textarea {
     font-size: x-large;
   }
 
+  .h1-and-figure-wrapper {
+    align-items: center;
+    justify-content: center;
+  }
+
+  figure.header-logo-container {
+    margin: 4% 2% 4% 5%;
+  }
+
+
   nav li a {
     font-size: x-large;
   }
